# krust

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml~  LICENSE  README.md  cerevisiae.pan_S288C_chrI.fa  s-tier
.github/workflows/: ci.yml  release.yml
benches/: kmer_benchmark.rs
examples/: async_count.rs  basic_count.rs  compare_with_jellyfish.rs  progress_bar.rs  streaming_large_file.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_canonical.rs  fuzz_kmer_from_sub.rs  fuzz_pack_unpack.rs
src/: async_api.rs  bitpacked_kmer.rs  builder.rs  canonical_kmer.rs  cli.rs  config.rs  configuration.rs  dashmaps.rs  error.rs  format.rs  histogram.rs  index.rs  input.rs  kmer.rs  lib.rs  main.rs  mmap.rs  progress.rs  reader.rs  revcomp_kmer.rs  run.rs  startup.rs  streaming.rs  unpacked_kmer.rs
tests/: find_invalid.rs  gzip_tests.rs  integration_tests.rs  jellyfish_compat.rs  kmer_new.rs  library_tests.rs  mmap_tests.rs  progress_tests.rs  property_tests.proptest-regressions  property_tests.rs  quality_tests.rs  streaming_fastq_tests.rs  tracing_tests.rs
tests/fixtures/: low_quality.fq  simple.fa  simple.fq  soft_masked.fa  with_n.fa  with_n.fq
