[package]
authors = ["Joseph Livesey <jlivesey@gmail.com>"]
description = "counts kmers, written in rust"
edition = "2021"
homepage = "https://github.com/suchapalaver/krust"
include = ["src/*", "LICENSE", "README.md"]
keywords = ["bioinformatics", "kmer"]
license = "MIT"
name = "krust"
readme = "./README.md"
repository = "https://github.com/suchapalaver/krust"
version = "0.1.0"

[dependencies]
bio = "*"
bytes = "1.3.0"
clap = "4.0.32"
colored = "2.0.0"
dashmap = "5.4.0"
fxhash = "0.2.1"
needletail = "0.5.1"
rayon = "*"
thiserror = "1.0.38"

[dev-dependencies]
insta = "1.14.1"

[features]
default = ["rust-bio"]
# Use needletail fasta reader
needletail = []
# Use rust-bio fasta reader
rust-bio = []
