[package]
authors = ["Joseph Livesey <jlivesey@gmail.com>"]
categories = ["command-line-utilities", "science"]
description = "A fast, parallel k-mer counter for DNA sequences in FASTA files"
edition = "2021"
homepage = "https://github.com/suchapalaver/krust"
include = ["src/*", "LICENSE", "README.md", "CHANGELOG.md", "tests/**/*"]
keywords = ["bioinformatics", "kmer", "dna", "fasta", "genomics"]
license = "MIT"
name = "krust"
readme = "./README.md"
repository = "https://github.com/suchapalaver/krust"
rust-version = "1.75"
version = "0.1.0"

[dependencies]
bio = "3.0.0"
bytes = "1.11.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
dashmap = "5.5"
needletail = "0.6"
rayon = "1.11"
rustc-hash = "2.1"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.46"
tempfile = "3.15"

[[bench]]
name = "kmer_benchmark"
harness = false

[features]
default = ["rust-bio"]
# Use needletail fasta reader
needletail = []
# Use rust-bio fasta reader
rust-bio = []
