[package]
authors = ["Joseph Livesey <jlivesey@gmail.com>"]
categories = ["command-line-utilities", "science"]
description = "A fast, parallel k-mer counter for DNA sequences in FASTA and FASTQ files"
edition = "2021"
homepage = "https://github.com/suchapalaver/kmerust"
include = ["src/*", "LICENSE", "README.md", "CHANGELOG.md", "tests/**/*"]
keywords = ["bioinformatics", "kmer", "dna", "fasta", "genomics"]
license = "MIT"
name = "kmerust"
readme = "./README.md"
repository = "https://github.com/suchapalaver/kmerust"
rust-version = "1.75"
version = "0.3.0"

[dependencies]
bio = "3.0.0"
bytes = "1.11.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
dashmap = "5.5"
needletail = { version = "0.6", optional = true }
rayon = "1.11"
rustc-hash = "2.1"
thiserror = "2.0"

# Optional dependencies for production features
flate2 = { version = "1.0", optional = true }
memmap2 = { version = "0.9", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.46"
proptest = "1.6"
tempfile = "3.15"
tracing-test = "0.2"

[[bench]]
name = "kmer_benchmark"
harness = false

[features]
default = ["rust-bio"]
# Use needletail fasta reader
needletail = ["dep:needletail"]
# Use rust-bio fasta reader
rust-bio = []
# Gzip compressed input support
gzip = ["dep:flate2"]
# Memory-mapped I/O for large files
mmap = ["dep:memmap2"]
# Tracing/logging instrumentation
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# Async API with Tokio
async = ["dep:tokio"]
# All production features
production = ["gzip", "mmap", "tracing"]
# All features including async
full = ["production", "async"]

[lints.rust]
unsafe_code = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific high-value lints promoted to warnings
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

# Allow printing for CLI binary
print_stdout = "allow"
print_stderr = "allow"

# Common pedantic lints that are occasionally too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
